--- a/Publications/Publications.html
+++ b/Publications/Publications.html
@@ -57,7 +57,7 @@
 <p>
   <br><b>Performance difference of graph-based and alignment-based hybrid error correction methods for error-prone long reads.</b><br>
   <b><a>Wang, A.</a></b>, <b><a>Au, K.F.</a></b>
-  <br><i>Genome Biology.</i> Accepted on 11/10/2019.  
+  <br><i>Genome Biology.</i> 2020. [<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-019-1885-y">Manuscript</a>] 
   </p>	  	
 <p>
 
